# paw-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  test_selfcheck.py
npm/: README.md  package.json
npm/lib/: check.js  installer.js
npm/scripts/: postinstall.js
npm/test/: test.js
paw/: __init__.py  __main__.py  cli.py  config.py  personas.py  plugins.py  spinner.py  tui.py
paw/core/: agent.py  llm.py  memory.py  tools.py
paw/tools/: __init__.py  builtin.py
paw/web/: __init__.py  app.py
paw/web/static/css/: style.css
paw/web/templates/: index.html
