[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paw-agent"
version = "0.3.0"
description = "Paw - 轻量级 AI 智能体框架，CLI + Web UI，新手友好"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "mhyy10"},
]
keywords = ["ai", "agent", "chatbot", "llm", "openai", "cli", "web-ui", "tools", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "prompt_toolkit>=3.0.0",
    "textual>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/mhyy10/paw-agent"
Repository = "https://github.com/mhyy10/paw-agent"
Issues = "https://github.com/mhyy10/paw-agent/issues"
Documentation = "https://github.com/mhyy10/paw-agent#readme"

[project.scripts]
paw = "paw.cli:app"

[tool.setuptools.packages.find]
include = ["paw*"]
